--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,4 +7,4 @@ spring.messages.basename=validation
 spring.datasource.url=jdbc:mysql://localhost:3306/csquare
 spring.datasource.username=root
 spring.datasource.password=root
-
+server.port = 8090
