--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,7 @@ spring.datasource.url=jdbc:mysql://localhost:3306/csquare
 spring.datasource.username=root
 spring.datasource.password=root
 server.port = 8090
+
+
+spring.http.multipart.max-file-size=2048KB
+spring.http.multipart.max-request-size=2048KB
