worked On Lead Management Signed-off-by: cct10122 <tiwari.vivek266@gmail.com>

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-spring.mvc.view.prefix: /WEB-INF/views/
-spring.mvc.view.suffix: .jsp
+#spring.mvc.view.prefix: /WEB-INF/views/
+#spring.mvc.view.suffix: .jsp
 spring.jpa.hibernate.ddl-auto=create
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 spring.jpa.show-sql=true
@@ -9,6 +9,8 @@ spring.datasource.username=root
 spring.datasource.password=root
 server.port = 8090
 
+security.basic.enabled=false
+security.ignored=/**
 
 spring.http.multipart.max-file-size=2048KB
 spring.http.multipart.max-request-size=2048KB
